--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,5 +8,42 @@
 	</head>
 	<body>
 		<div>index.html</div>
+		<div>
+			<a href="/helloWorldServlets">helloWorldServlets</a>
+		</div>
+		<div>
+			<a href="/searchFormServlet">searchFormServlet</a>
+		</div>
+		<div>
+			<a href="/tablesListServlets">tablesListServlets</a>
+		</div>
+		<div>
+			<a href="/tablesBundleServlets">tablesBundleServlets</a>
+		</div>
+		<div>
+			<a href="/tablesBeanListServlets">tablesBeanListServlets</a>
+		</div>
+
+		<div>Form element</div>
+		<div>
+			<form action="/helloWorldServlets" method="get">
+				<input type="text" name="firstName" id="" value="Sanghun" />
+				<input type="text" name="secondName" id="" value="Oh" />
+				<input type="hidden" name="hiddenParam" value="yojulab" /><br />
+				<button>helloWorldServlets</button>
+			</form>
+			<form action="/searchFormServlet" method="get">
+				<button>searchFormServlet</button>
+			</form>
+			<form action="/tablesListServlets" method="get">
+				<button>tablesListServlets</button>
+			</form>
+			<form action="/tablesBundleServlets" method="get">
+				<button>tablesBundleServlets</button>
+			</form>
+			<form action="/tablesBeanListServlets" method="get">
+				<button>tablesBeanListServlets</button>
+			</form>
+		</div>
 	</body>
 </html>
