add various servlets

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -44,6 +44,30 @@
 			<form action="/tablesBeanListServlets" method="get">
 				<button>tablesBeanListServlets</button>
 			</form>
+			<div>
+				<a href="/simple/WithDBServlets">/simple/WithDBServlets SimpleWithDBServlets.java</a>
+			</div>
+			<div>
+				<a href="/cookies/createCookieServlets">/cookies/createCookieServlets CreateCookieServlets.java</a>
+			</div>
+			<div>
+				<a href="/cookies/createSessionServlets">/cookies/createSessionServlets CreateSessionServlets.java</a>
+			</div>
+			<div>
+				<a href="/cookies/getAndDeleteServlets">/cookies/getAndDeleteServlets GetAndDeleteCookieServlets.java</a>
+			</div>
+			<div>
+				<a href="/cookies/getSessionServlets">/cookies/getSessionServlets GetSessionServlets.java</a>
+			</div>
+			<div>
+				<a href="/session/createServlets?username=yojulab&password=1234"
+					>/session/createServlets CreateSessionServlets.java</a
+				>
+			</div>
+			<div>Cases</div>
+			<div>
+				<a href="/polls/PollServlet?QUESTIONS_UID=Q1">DetailServlets.java /polls/details.jsp</a>
+			</div>
 		</div>
 	</body>
 </html>
