--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -64,6 +64,18 @@
 					>/session/createServlets CreateSessionServlets.java</a
 				>
 			</div>
+			<div>
+				<a href="/session/createServlets?username=yojulab&password=1234"
+					>/session/createServlets?username=yojulab&password=1234 CreateSessionServlets.java</a
+				>
+			</div>
+			<div>
+				<form action="/session/createServlets" method="post">
+					<input type="text" name="username" id="" value="yojulab" />
+					<input type="text" name="password" id="" value="1234" />
+					<button>/session/CreateServlets with post</button>
+				</form>
+			</div>
 			<div>Cases</div>
 			<div>
 				<a href="/polls/PollServlet?QUESTIONS_UID=Q1">DetailServlets.java /polls/details.jsp</a>
